[package]
name = "streaming_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.0"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.107"
serde = "1.0.188"
dotenv = "0.15.0"
linkify = "0.10.0"
